[MODORDERS-1203] Total expended amount is not displayed when order has no fund distributions (#1044)
* [MODORDERS-1203] Extend FiscalYearService to fetch current FY

* [MODORDERS-1203] Minor refactor for ConfigurationEntriesCache

* [MODORDERS-1203] Fetch and cache system timezone

* [MODORDERS-1203] Create caches with CacheUtils

* [MODORDERS-1203] Get current fiscal year correctly

* [MODORDERS-1203] Update unit tests

* [MODORDERS-1203] Fetch current FY when calculating totals

* [MODORDERS-1203] Fix dependency version

* [MODORDERS-1203] Remove unused import

* [MODORDERS-1203] Update permissions and add unit test

* [MODORDERS-1203] Avoid NPEs

* [MODORDERS-1203] Improve logging

* [MODORDERS-1203] Avoid NPEs